--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,7 +85,7 @@ if(BUILD_TESTS)
 
     enable_testing()
 
-    add_subdirectory(tests)
+    #add_subdirectory(tests)
 endif()
 
 add_subdirectory(examples)
