--- a/src/ecoscore/priority/CMakeLists.txt
+++ b/src/ecoscore/priority/CMakeLists.txt
@@ -1,19 +1,18 @@
 # src/ecoscore/priority/CMakeLists.txt
-cmake_minimum_required(VERSION 3.28)
+add_library(ecoscore.priority STATIC)
 
-add_library(ecoscore.priority INTERFACE)
-
-target_sources(ecoscore.priority INTERFACE
+target_sources(ecoscore.priority PRIVATE
     FILE_SET cxx_modules TYPE CXX_MODULES
-    BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
     FILES
+        Priority.ixx
         VirtualPriorityOrdering.ixx
         StaticPriorityOrdering.ixx
         PriorityOrderingGraph.ixx
+        PriorityTags.ixx
 )
 
-target_include_directories(ecoscore.priority INTERFACE
-    ${CMAKE_CURRENT_SOURCE_DIR}/../../include
+target_include_directories(ecoscore.priority PUBLIC
+    ${CMAKE_SOURCE_DIR}/include
 )
 
-target_compile_features(ecoscore.priority INTERFACE cxx_std_20)
+target_compile_features(ecoscore.priority PUBLIC cxx_std_20)
