--- a/src/ecoscore/tag/CMakeLists.txt
+++ b/src/ecoscore/tag/CMakeLists.txt
@@ -1,21 +1,17 @@
-cmake_minimum_required(VERSION 3.28)
+# src/ecoscore/tag/CMakeLists.txt
+add_library(ecoscore.tag STATIC)
 
-add_library(ecoscore.tag INTERFACE)
-
-target_sources(ecoscore.tag INTERFACE
+target_sources(ecoscore.tag PRIVATE
     FILE_SET cxx_modules TYPE CXX_MODULES
-    BASE_DIR ${CMAKE_CURRENT_SOURCE_DIR}
     FILES
         Tag.ixx
-        CharsetTags.ixx
-        LanguageTags.ixx
         PhaseTags.ixx
         FlowTags.ixx
         OutcomeTags.ixx
 )
 
-target_include_directories(ecoscore.tag INTERFACE
+target_include_directories(ecoscore.tag PUBLIC
     ${CMAKE_SOURCE_DIR}/include
 )
 
-target_compile_features(ecoscore.tag INTERFACE cxx_std_20)
+target_compile_features(ecoscore.tag PUBLIC cxx_std_20)
