--- a/src/ecoscore/meta/CMakeLists.txt
+++ b/src/ecoscore/meta/CMakeLists.txt
@@ -17,13 +17,17 @@ target_sources(ecoscore.meta PRIVATE
 target_include_directories(ecoscore.meta PUBLIC
     ${CMAKE_SOURCE_DIR}/include
 )
+
 target_compile_features(ecoscore.meta PUBLIC cxx_std_23) 
+
 target_compile_options(ecoscore.meta PRIVATE
+    /W4 /WX
     $<$<CXX_COMPILER_ID:MSVC>:/std:c++latest /permissive->
 )
 
 set_target_properties(ecoscore.meta PROPERTIES
-    CXX_STANDARD 20
+    CXX_STANDARD 23
     CXX_STANDARD_REQUIRED ON
     CXX_EXTENSIONS OFF
+    CXX_MODULE_STD 1
 )
