--- a/src/ecoscore/state/CMakeLists.txt
+++ b/src/ecoscore/state/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.28)
 
 add_library(ecoscore.state STATIC)
 
-target_sources(ecoscore.state PRIVATE
+target_sources(ecoscore.state PUBLIC
     FILE_SET cxx_modules TYPE CXX_MODULES
     FILES
         Detail.ixx
@@ -35,7 +35,16 @@ target_include_directories(ecoscore.state PUBLIC
     ${CMAKE_SOURCE_DIR}/include
 )
 
-target_compile_features(ecoscore.state PUBLIC cxx_std_20)
+target_compile_features(ecoscore.state PUBLIC cxx_std_23)
 
-# Enable strict warnings for MSVC
-target_compile_options(ecoscore.state PRIVATE /W4 /WX)
+target_compile_options(ecoscore.state PRIVATE
+    /W4 /WX
+    $<$<CXX_COMPILER_ID:MSVC>:/std:c++latest /permissive->
+)
+
+set_target_properties(ecoscore.state PROPERTIES
+    CXX_STANDARD 23
+    CXX_STANDARD_REQUIRED ON
+    CXX_EXTENSIONS OFF
+    CXX_MODULE_STD 1
+)
