--- a/src/category/CMakeLists.txt
+++ b/src/category/CMakeLists.txt
@@ -1,6 +1,6 @@
-add_library(meta INTERFACE)
+add_library(category INTERFACE)
 
-target_include_directories(meta INTERFACE
+target_include_directories(category INTERFACE
     $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
 )
