--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,3 +18,18 @@ add_subdirectory(src/language)
 target_link_libraries(language INTERFACE category)
 #add_subdirectory(apps/language)
 add_smoke_test_for_headers(language)
+
+add_subdirectory(src/flow)
+target_link_libraries(flow INTERFACE category)
+target_link_libraries(flow INTERFACE language)
+add_smoke_test_for_headers(flow)
+
+add_subdirectory(src/outcome)
+target_link_libraries(outcome INTERFACE category)
+#target_link_libraries(outcome INTERFACE language)
+add_smoke_test_for_headers(outcome)
+
+add_subdirectory(src/phase)
+target_link_libraries(phase INTERFACE category)
+#target_link_libraries( INTERFACE language)
+add_smoke_test_for_headers(phase)
